// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherData should render correctly 1`] = `
<div>
  <div
    class="WeatherData-Container"
  >
    <div />
  </div>
</div>
`;

exports[`WeatherData should render correctly with data 1`] = `
<div>
  <div
    class="WeatherData-Container"
  >
    <h4
      class="WeatherData-Title"
    >
      Datos del clima 🌡️
    </h4>
    <div
      class="WeatherData-Details-Container"
    >
      <div
        class="WeatherData-Image-Container"
      >
        <img
          alt="main description 10"
          src="https://openweathermap.org/img/wn/icod@2x.png"
        />
      </div>
      <div
        class="WeatherData-Rows-Container"
      >
        <div
          class="WeatherData-Row"
        >
          <p>
            Temperatura
            :
          </p>
          <p>
            10 ºC
          </p>
        </div>
        <div
          class="WeatherData-Row"
        >
          <p>
            Humedad
            :
          </p>
          <p>
            10 %
          </p>
        </div>
        <div
          class="WeatherData-Row"
        >
          <p>
            Presión
            :
          </p>
          <p>
            10 hPa
          </p>
        </div>
        <div
          class="WeatherData-Row"
        >
          <p>
            Viento
            :
          </p>
          <p>
            10 m/s
          </p>
        </div>
        <div
          class="WeatherData-Row"
        >
          <p>
            Estado
            :
          </p>
          <p>
            main 
          </p>
        </div>
        <div
          class="WeatherData-Row"
        >
          <p>
            Cielo
            :
          </p>
          <p>
            description 
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WeatherData should render correctly with empty data 1`] = `
<div>
  <div
    class="WeatherData-Container"
  >
    <div />
  </div>
</div>
`;

exports[`WeatherData should render correctly with loading 1`] = `
<div>
  <div
    class="WeatherData-Container"
  >
    <div
      class="WeatherData-LoadingMessage"
    >
      <div
        class="SpinningIcon-fast"
        speed="fast"
      >
        ⏳
      </div>
       
      <p>
        Cargando datos del clima...
      </p>
    </div>
  </div>
</div>
`;
